--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,26 @@
   <title>Document</title>
 </head>
 <body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDkST3g1IHx7iegmHvvDnDTA7zkyXHLz54",
+    authDomain: "red-social-2-104d9.firebaseapp.com",
+    databaseURL: "https://red-social-2-104d9.firebaseio.com",
+    projectId: "red-social-2-104d9",
+    storageBucket: "red-social-2-104d9.appspot.com",
+    messagingSenderId: "309842319422",
+    appId: "1:309842319422:web:5661b3d46036469559d96f"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   <script type="module" src="main.js"></script>
 </body>
 </html>
