--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Viviendo Chile</title>
 </head>
+
 <body>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+
+
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
+  //CLAVE DE ACCESO A CONSOLA FIREBASE
   // Your web app's Firebase configuration
-  var firebaseConfig = {
+
+  const firebaseConfig = {
     apiKey: "AIzaSyDkST3g1IHx7iegmHvvDnDTA7zkyXHLz54",
     authDomain: "red-social-2-104d9.firebaseapp.com",
     databaseURL: "https://red-social-2-104d9.firebaseio.com",
@@ -24,9 +31,26 @@
     messagingSenderId: "309842319422",
     appId: "1:309842319422:web:5661b3d46036469559d96f"
   };
+  
+  //INICIALIZACION DE FIREBASE
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-  <script type="module" src="main.js"></script>
+
+
+  <section id="root">
+    <div >
+      <input type="name" id="loginName" class="inputLog">
+      <input type="email" id="loginEmail" class="inputLog">
+      <input type="password" id="loginPassword" class="inputLog">
+      <button id="registerBttn" class="loginBttn">registrar</button>
+
+    </div>
+  </section>
+
+
+  <script type="module" src="main.js"></script> 
+
+
 </body>
 </html>
