--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <section id="postSection">
-    <form id="signupForm">
+    <!-- <form id="signupForm">
       <h2>REGISTRO NUEVO USUARIO</h2>
       <input type="name" class="inputLog" id="nameRegister" placeholder="Nombre">
       <input type="email" class="inputLog" id="emailRegister" placeholder="Email">
@@ -45,7 +45,7 @@
       
       <button type="button" class="buttonLog" id="buttonRegister">Registrarme</button>
       <button type="button" class="buttonLog" id="buttonLogin2">Iniciar Sesión</button>
-      </form>
+      </form> -->
 
 
     <div id="printPost"></div>
